[package]
name = "sleigh_parser"
version = "0.1.0"
authors = ["saruman9 <rum.274.4@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.19.1"
logos = "0.11.4"
lazy_static = "1.4.0"
regex = "1.4.2"
log = "0.4.11"
env_logger = "0.8.1"
sleigh_preprocessor = { git = "ssh://git@github.com/saruman9/sleigh_preprocessor.git", branch = "master" }

[build-dependencies]
lalrpop = "0.19.1"
